# ffiv-maps

./: Cargo.toml
assets/audio/: BGM_AI.at3  BGM_PROLOGUE.at3
assets/maps/: castle1_baron_castle_01.ron  castle2_dwarven_01.ron  dtown_agart_01.ron  ship_adamant_forest_01.ron  town_mythril_01.ron
assets/prefabs/character/: cain.ron  cecil.ron  kyuucecil.ron  kyuurydia.ron  roza.ron  rydia.ron  yang.ron
resources/: bindings.ron  display_config.ron
src/: components.rs  entities.rs  main.rs  resources.rs  states.rs  systems.rs
src/components/: animation.rs  camera.rs  direction.rs  map.rs  movement.rs  player_one.rs
src/entities/: camera.rs  camera_subject.rs  player_one.rs
src/resources/: asset.rs  game.rs  map.rs  sprites.rs
src/states/: load.rs
src/systems/: animation.rs  cleanup.rs  debug.rs  input.rs  transformation.rs
